--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "t2",
+  "name": "noramp-nextjs-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "norampkit": "^1.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
